--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="java.js"></script>
+    <script src="https://condif.github.io/java.js"></script>
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Lucifer</title>
 </head>
 <body>
