--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="java.js"></script>
     <script src="https://condif.github.io/java.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://condif.github.io/style.css">
 
     <title>Lucifer</title>
 </head>
